spacing fixed

--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -286,7 +286,7 @@
 
 @media screen and (max-width: 768px) {
 .home-work{
-    padding: 30px 0 30px 0;
+    padding: 150px 0 150px 0;
     width: 100%;
     background-color: white;
     div{
